manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82161846"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82210669"
  template:
    metadata:
      labels:
        app: "82210669"
    spec:
      containers:
        - name: "82161846" 
          image: ce82210669acr.azurecr.io/82210669
          ports:
          - containerPort: 8080
