manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82210669
    namespace: "82210669-argocd"
spec:
    ports:
    - port: 8080 
    selector:
        app: "82210669"
